[package]
name = "rust-tcp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "=4.0.15", features = ["derive"] }

tokio = { version = "=1.21.2", features = ["full"] }
tokio-util = {version = "=0.7.4", features = ["full"]}
tokio-stream = { version = "=0.1.11", features = ["sync"] }

futures = "=0.3.24"
parking_lot = "=0.12.1"
num_cpus = "=1.13.1"
num-format = "=0.4.3"
array-init = "=2.0.1"
event-listener = "=2.5.3"
prometheus = "=0.13.2"
lazy_static = "=1.4.0"
# socket2 = "=0.4.7"

anyhow = "=1.0.65"
bytes = "=1.2.1"
# tracing = { version = "=0.1.37", features = ["max_level_trace", "release_max_level_debug"] }
# tracing-subscriber = { version = "=0.3.16", features = ["env-filter", "fmt", "local-time", "time"]}
# tracing-appender = "=0.2.2"
# time = { version = "=0.3.15", features = ["macros"]}
# ansi_term = "=0.12.1"

# serde = "=1.0.145"
# serde_derive = "=1.0.145"
# serde_json = "=1.0.86"
